--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,8 @@
 development:
  adapter: mysql2
  database: anumc
- username: root
- password: 
+ username: anumc
+ password: anumc
 
 
 # Warning: The database defined as "test" will be erased and
