--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
  adapter: mysql2
  database: anumc
  username: anumc
- password: anumc
+ password: chimneyfrogturnip
 
 
 # Warning: The database defined as "test" will be erased and
@@ -24,5 +24,4 @@ production:
   encoding: utf8
   database: anumc
   username: anumc
-  password: is8iyLUTRLeF
-  socket: /var/run/mysqld/mysqld.sock
+  password: chimneyfrogturnip
