--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
  adapter: mysql2
  database: anumc
  username: anumc
- password: chimneyfrogturnip
+ password: anumc
 
 
 # Warning: The database defined as "test" will be erased and
