--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
  adapter: mysql2
- database: anumc
+ database: drupal7
  username: anumc
  password: anumc
 
@@ -22,6 +22,6 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: anumc
+  database: drupal7
   username: anumc
   password: chimneyfrogturnip
